GNOME Bugzilla – Bug 731272
fix language showing
Last modified: 2014-06-12 11:19:55 UTC
Created attachment 277957 [details] [review] user-accounts: fix language showing Wrong language is shown for user with unset language if we are switching between "Other accounts" and panel is locked.
Review of attachment 277957 [details] [review]: Looks fine (and even fixes the indentation!)
Comment on attachment 277957 [details] [review] user-accounts: fix language showing master: commit 0173b88f99e1a0356fcfa5e1cd1e568dd3dbf6cf gnome-3-12: commit 26a232790e4a97a63a20a3f9065aa042e30a8d62