user-accounts: fix language showing

Wrong language is shown for user with unset language if we are
switching between "Other accounts" and panel is locked.

https://bugzilla.gnome.org/show_bug.cgi?id=731272